<resources>
    <string name="app_name">Monoplug</string>
    <string name="email_address">Email address</string>
    <string name="address">Address</string>
    <string name="subject">Subject</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="home">Home</string>
    <string name="send">Send</string>
    <string name="social">Social</string>
    <string name="live">Live</string>
    <string name="flat_no">Flat no.8989/A, NCHY, Distt. Mohali</string>
    <string name="news_details">News Details</string>
    <string name="story_details">Story Details</string>
    <string name="blog_details">Blog Details</string>
    <string name="post_details">Post Details</string>
    <string name="proposal_details">Proposal Details</string>
    <string name="create_post">Create Post</string>
    <string name="create_idea">Create Idea Trading Session</string>
    <string name="user_profile">User Profile</string>
    <string name="create_room">Create Room</string>
    <string name="artist_profile">Artist Profile</string>
    <string name="job_details">Job Details</string>
    <string name="create_job">Create Job</string>
    <string name="my_jobs">My Jobs</string>
    <string name="mr">Mr.</string>
    <string name="room_name">Room Name</string>
    <string name="cont">Continue</string>
    <string name="raise_dispute">Raise Dispute</string>
    <string name="title">Title</string>
    <string name="rooms">Rooms</string>
    <string name="rooms_users">Room Users</string>
    <string name="submit">Submit</string>
    <string name="accept">Accept</string>
    <string name="message">Messages</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="send_message">Send Message</string>
    <string name="hire">Hire</string>
    <string name="reject">Reject</string>
    <string name="notifications">Notifications</string>
    <string name="archived">Archived</string>
    <string name="change_password">Change Password</string>
    <string name="how_it_works">How It Works</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="user">User</string>
    <string name="mj96">MJ96</string>
    <string name="behind_the_scenes">Behind The Scenes</string>
    <string name="cancel">Cancel</string>
    <string name="invite">Invite</string>
    <string name="create_story">Create Story</string>
    <string name="create_lesson_request">Create Lesson Request</string>
    <string name="artist">Artist</string>
    <string name="budget">Budget</string>
    <string name="drummer">Drummer</string>
    <string name="guitar">Guitar</string>
    <string name="budget500">500</string>
    <string name="sub_category">Sub Category</string>
    <string name="category">Category</string>
    <string name="date_time">Date/Time</string>
    <string name="ping">Ping</string>
    <string name="MarkJobAsDone">Mark Job As Done</string>
    <string name="time">10/04/2021 04:57 PM</string>
    <string name="post">Post</string>
    <string name="rate">Rate</string>
    <string name="RaiseDispute">Raise Dispute</string>
    <string name="lesson">Lesson</string>
    <string name="search">Search</string>
    <string name="signup">Signup</string>
    <string name="micheal">Micheal</string>
    <string name="update">Update</string>
    <string name="micheal_email">micheal@yopmail.com</string>
    <string name="smith">Smith</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="don_t_have_an_account">Don’t have an account? <b>Signup</b></string>
    <string name="already_have_an_account">Already have an account? <b>Login</b></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_as">Register As</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book.
    </string>
    <string name="job_price_250">Job Price: <b>$250</b></string>
    <string name="london_uk">London, UK</string>
    <string name="category_name">Category Name</string>
    <string name="band_name">Band Name</string>
    <string name="cancel_invite">Cancel Invite</string>
    <string name="see_details">See Details</string>
    <string name="discussion">Discussion over improvement points in an event</string>
    <string name="my_room"><u>My Room</u></string>
    <string name="john_drummers">John \n Drummers</string>
    <string name="verification_link">Verification link has been sent on your email address.</string>
    <string name="ok">Ok</string>
    <string name="type_a_message">Type a message...</string>
    <string name="reset_password">Reset password link has been sent on your email address.</string>
    <string name="reset">Reset</string>
    <string name="how_it_works_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="lesson_details"><u>Lesson Details</u></string>
    <string name="behind_the"><u>Behind The Scenes</u></string>
    <string name="idea_trading">Idea Trading</string>

</resources>