<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sp_bg_color"
        tools:context=".fragment.ArtistProfileFragment">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_common"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:toolbar="@{@string/artist_profile}"
            app:toolbarImg="@{@drawable/back}" />

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/user_pro_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imgUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgUser"
            app:layout_constraintTop_toTopOf="@+id/imgUser">

            <TextView
                android:id="@+id/tv55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="55"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/clLayout"

                app:layout_constraintTop_toTopOf="@+id/clLayout" />

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="Followers"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv55"
                app:layout_constraintStart_toStartOf="@+id/tv55"
                app:layout_constraintTop_toBottomOf="@+id/tv55" />


            <TextView
                android:id="@+id/tv71"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="71"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/tv01"
                app:layout_constraintStart_toEndOf="@+id/tv55"
                app:layout_constraintTop_toTopOf="@+id/tv55" />

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="Following"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="34dp"
                app:layout_constraintEnd_toEndOf="@+id/tv71"
                app:layout_constraintStart_toStartOf="@+id/tv71"
                app:layout_constraintTop_toBottomOf="@+id/tv71"/>

            <TextView
                android:id="@+id/tv01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="37dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="01"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv71" />

            <TextView
                android:id="@+id/tvTotalJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="Total Job"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tv01"
                app:layout_constraintStart_toStartOf="@+id/tv01"
                app:layout_constraintTop_toBottomOf="@+id/tv01" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvJohn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/john_drummers"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imgUser"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toStartOf="@+id/imgUser"
            app:layout_constraintTop_toBottomOf="@+id/imgUser"
            android:fontFamily="@font/montserrat_medium"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            android:layout_width="102dp"
            android:layout_height="30dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/btn_design_two"
            android:padding="2dp"
            android:text="Follow"
            android:fontFamily="@font/montserrat_medium"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvJohn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvJohn" />


        <View
            android:id="@+id/line_27"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#26FFFFFF"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvJohn" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/category_name"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_27" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/band_name"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv1" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/job_price_250"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv2" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/london_uk"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv3" />

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="5dp"
            android:text="Rating: 2.5"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/line_27" />

        <TextView
            android:id="@+id/tvLessonDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/lesson_details"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv5" />

        <TextView
            android:id="@+id/tvBehindTheScene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="15sp"
            android:layout_marginEnd="15dp"
            android:text="@string/behind_the"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLessonDetails" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/my_star"
            app:layout_constraintBottom_toBottomOf="@+id/tv5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv5" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_layout_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv4"
            app:tabBackground="@drawable/tab_background_design"
            app:tabGravity="fill"
            app:tabIndicator="@null"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed"
            app:tabTextAppearance="@style/CustomTextAppearanceTab"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/white"
            android:layout_marginTop="15dp"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>